<resources>
    <string name="app_name" translatable="false">Blackjack</string>
    <string name="webclient_id" translatable="false">752234267388-fgaat8sqor7bb0l3c7g67s0e2ih88j5e.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">466824041889664</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb466824041889664</string>
    <string name="animation_online_main_screen_to_detail" translatable="false">animationOnlineMainScreenToDetail</string>
    <string name="detail_to_animation_online_main_screen" translatable="false">detailToAnimationOnlineMainScreen</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="offline_game_fragment_bet_must_not_be_0">Bet is 0, choose your bet.</string>
    <string name="fragment_main_screen_new_game">Start new game</string>
    <string name="fragment_main_game_start_game">Start</string>
    <string name="fragment_main_game_dealer_score">DEALER SCORE</string>
    <string name="fragment_main_game_you_win">WIN</string>
    <string name="fragment_main_game_you_lose">LOSE</string>
    <string name="online_game_fragment_bust">BUST</string>
    <string name="fragment_main_game_draw">DRAW</string>
    <string name="fragment_main_game_none">NONE</string>
    <string name="bet_dialog_reset">reset</string>
    <string name="bet_dialog_default_bet">0</string>
    <string name="bet_dialog_ok">OK</string>
    <string name="bet_dialog_not_enough_money">Not enough money</string>
    <string name="fragment_main_screen_load_game">load game</string>
    <string name="load_game_dialog_empty_slot">Empty slot</string>
    <string name="load_game_dialog_game_number">Game</string>
    <string name="load_game_dialog_bank_amout">"Bank amount: "</string>
    <string name="new_game_dialog_enter_name">Enter a save name</string>
    <string name="bet_dialog_cancel">Cancel</string>
    <string name="fragment_main_game_current_bet">BET:</string>
    <string name="fragment_main_game_total_spent">Total spent:</string>
    <string name="fragment_main_game_blackjack">BJ</string>
    <string name="fragment_main_game_insurance">Would you like to assure?</string>
    <string name="fragment_main_game_insurance_title">Insurance</string>
    <string name="fragment_main_game_assured">Your are assured</string>
    <string name="fragment_main_game_blackjack_result">Black jack</string>
    <string name="fragment_main_game_insurance_win">Insurance win</string>
    <string name="fragment_main_game_insurance_lose">Insurance lose</string>
    <string name="fragment_main_game_shuffle_deck">Red card, dealer shuffle the deck</string>
    <string name="new_game_dialog_delete_save">Delete a save slot before make new game.</string>
    <string name="fragment_main_game_hit">Hit</string>
    <string name="fragment_main_game_stop">Stop</string>
    <string name="fragment_main_game_double">Double</string>
    <string name="fragment_main_game_split">Split</string>
    <string name="fragment_main_game_fab_description">Bet choice</string>
    <string name="fragment_main_screen_facebook_sign">Sign with facebook</string>
    <string name="fragment_main_screen_google_sign">Sign with goole</string>
    <string name="main_screen_fragment_login_successfull">Successfully logged in</string>
    <string name="facebook_sigin_in_activity_failure">Authentication failed</string>
    <string name="fragment_main_screen_play_online">Play online</string>
    <string name="activity_online_main_screen_search_game">Search online game</string>
    <string name="online_main_screen_adapter_is_playing">Is playing</string>
    <string name="online_main_screen_adapter_is_online">Online</string>
    <string name="fragment_detail_online_user_add_friend_description">Add friend</string>
    <string name="fragment_detail_online_user_play_with">Play with him</string>
    <string name="online_main_screen_adapter_is_offline">Is offline</string>
    <string name="online_main_screen_adapter_ask_for_play">Ask for play</string>
    <string name="detail_online_user_fragment_somebody_want_to_play">Somebody want to play with you.</string>
    <string name="detail_online_user_fragment_invitation_to_play">Invitation to play</string>
    <string name="detail_online_user_fragment_play">play</string>
    <string name="detail_online_user_fragment_cancel">Cancel</string>
    <string name="dialog_invitation_to_play_positive_btn">Play</string>
    <string name="dialog_invitation_to_play_negative_btn">Cancel</string>
    <string name="invitation_to_play_dialog_message">want to play with you. Did you accept?</string>
    <string name="dialog_invitation_to_play_title">Invitation to play</string>
    <string name="dialog_waiting_for_answer_title">Waiting for opponent answer</string>
    <string name="online_main_screen_adapter_waiting_answer">Waiting for opponent answer</string>
    <string name="online_game_fragment_opponent_leave">leave the game.</string>
    <string name="online_game_fragment_server_shutdown">Server shutdown</string>
    <string name="online_game_fragment_blackjack">BJ</string>
    <string name="online_game_fragment_contract_loan">Contract loan</string>
    <string name="fragment_online_game_rebuy">Rebuy</string>
    <string name="online_game_fragment_loan_online_message">You can contract a new loan to get 1500 in your wallet but you increase your number of loan by +1</string>
    <string name="online_game_fragment_loan_offline_message">You can contract a new loan to get 500 in your wallet</string>
    <string name="fragment_online_main_screen_fab_description">chat_fab</string>
    <string name="fragment_online_main_screen_chat_input_hint">message</string>
    <string name="disconnected_dialog_title">Disconnected</string>
    <string name="disconnected_dialog_message">You are disconnected for no action long activity. Do you want to reconnect?</string>
    <string name="activity_main_screen_drawer_menu_logout">Logout</string>
    <string name="activity_main_screen_drawer_menu_setting">Setting</string>
    <string name="activity_main_screen_drawer_menu_profile">Profile</string>
    <string name="fragment_setting_menu">SETTING</string>
    <string name="username">username: </string>
    <string name="number_of_loan">number of loan: </string>
    <string name="fragment_profile_title">Edit Profile</string>
    <string name="fragment_profile_save_btn">save</string>
    <string name="fragment_profile_hint_name">name</string>
    <string name="fragment_profile_rotate_image">rotate</string>
    <string name="fragment_profile_image_over_size">Image size is too high, please select an another.</string>
    <string name="fragment_detail_online_user_add_friend">Add Friend</string>
    <string name="online_main_screen_activity_players_view">Players View</string>
    <string name="online_main_screen_activity_chat_view">Chat View</string>
    <string name="online_game_activity_board_view">Board</string>
    <string name="online_game_activity_chat_view">Chat</string>
    <string name="online_game_activity_quit">Quit</string>
    <string name="online_game_activity_quit_message">Quit the game and go to main menu?</string>
    <string name="online_game_activity_yes">YES</string>
    <string name="online_game_activity_no">NO</string>
    <string name="online_game_activity_new_message">NEW MESSAGE</string>
    <string name="opponent_quit_game_dialog_title">Opponent leave</string>
    <string name="opponent_quit_game_dialog_message">Your opponent leave the game, server shutdown</string>
    <string name="opponent_quit_game_dialog_positive_btn">OK</string>
    <string name="online_game_fragment_welcome">Welcome to the BlackChat ;) have fun</string>
    <string name="waiting_for_answer_dialog_opponent_cancel_request">Opponent cancel the request</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="profile_fragment_menu">Save</string>
    <string name="profile_activity_toolbar_title">Profile</string>
    <string name="setting_menu_activity_toolbar_title">SETTING</string>
    <string name="activity_main_screen_drawer_menu_home">Home</string>
    <string name="dialog_load_game_slot_1">Load slot 1</string>
    <string name="dialog_load_game_slot_2">Load slot 2</string>
    <string name="dialog_load_game_slot_3">Load slot 3</string>
    <string name="dialog_load_game_delete_1">Delete slot 1</string>
    <string name="dialog_load_game_delete_2">Delete slot 2</string>
    <string name="dialog_load_game_delete_3">Delete slot 3</string>
    <string name="dialog_bet_thousand">Thousand</string>
    <string name="dialog_bet_ten_of_thousand">Ten of thousand</string>
    <string name="dialog_bet_hundred">Hundred</string>
    <string name="dialog_bet_dozens">Dozens</string>
    <string name="dialog_bet_unity">Unity</string>
    <string name="dialog_bet_title">Choose your bet</string>
    <string name="dialog_bet_number_of_bet">Box</string>
    <string name="dialog_bet_choose_number_of_bet">Choose the number of box</string>
    <string name="player_board_score_title">Score</string>
    <string name="player_board_bet_title">Bet</string>
    <string name="player_board_double_title">Double</string>
    <string name="player_board_insurance_title">Insurance</string>
    <string name="player_board_split" translatable="false">S</string>
    <string name="player_board_insurance" translatable="false">A</string>
    <string name="player_board_double" translatable="false">X2</string>
    <string name="insurance_fab_description">Button for insurance</string>
    <string name="message_for_insurance" translatable="false">If you want to insure the box for the half of your bet, click on the A button corresponding to this box.</string>
    <string name="fragment_online_game_wallet">Wallet:</string>
    <string name="activity_offline_game_help">Help</string>
    <string name="fragment_main_game_help_explanation">Click on a button or an element on the screen to have some details.</string>
    <string name="activity_offline_game_quit">Quit</string>
    <string name="player_info_dialog_title">Player Box</string>
    <string name="player_info_dialog_message">Here you can see your hand with all of your cards on the left. \n On the right side you can see: \n\t- Your score using your added cards. \n\t- Your bet in €. \n\t- X2 icon is highlight If you double your box. \n\t- The color change if you split your box the colour corresponding to the box number you split.</string>
    <string name="bet_help_dialog_title">Place your bets</string>
    <string name="bet_help_dialog_message">With this button you can choose your bet and choose how many box you want to play. Each box have the same bet. If you do not have enough money you cannot validate your bet.</string>
    <string name="hit_help_dialog_title">Hit cards</string>
    <string name="hit_help_dialog_message">Add a card to your hand and increase your score but if your score is over 21 you bust and automatically pass your turn to the next hand or the dealer.</string>
    <string name="stop_help_dialog_title">Stop and Pass</string>
    <string name="stop_help_dialog_message">Pass your turn to the next box or to the dealer.</string>
    <string name="double_help_dialog_title">Double your bet</string>
    <string name="double_help_dialog_message">Double your bet but you have to take one and only card and you automatically pass your turn after doing this. It is recommended to double when you have a score equal to 9,10 or 11 and if the dealer have a little card.</string>
    <string name="split_help_dialog_title">Split your cards</string>
</resources>