<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/activity_main_screen_drawer_profile_menu"
            android:title="@string/activity_main_screen_drawer_menu_profile"
            android:icon="@drawable/ic_baseline_person_24"/>

        <item
            android:id="@+id/activity_main_screen_drawer_setting_menu"
            android:title="@string/activity_main_screen_drawer_menu_setting"
            android:icon="@drawable/ic_baseline_settings_24"/>

        <item
            android:id="@+id/activity_main_screen_drawer_menu_logout"
            android:title="@string/activity_main_screen_drawer_menu_logout"
            android:icon="@drawable/ic_power_settings" />

    </group>
</menu>