<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/load_game_dialog_first_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/load_game_dialog_second_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/load_game_dialog_delete_first_btn"
        style="@style/main_screen_button"
        android:text="@string/load_game_dialog_empty_slot"
        android:contentDescription="@string/dialog_load_game_slot_1"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/load_game_dialog_delete_first_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/load_game_dialog_delete_second_btn"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/main_screen_button"
        android:src="@drawable/ic_delete_24"
        android:background="@android:color/transparent"
        android:text="@string/load_game_dialog_empty_slot"
        android:contentDescription="@string/dialog_load_game_delete_1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/load_game_dialog_second_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/load_game_dialog_first_btn"
        app:layout_constraintBottom_toTopOf="@+id/load_game_dialog_third_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/load_game_dialog_delete_second_btn"
        style="@style/main_screen_button"
        android:text="@string/load_game_dialog_empty_slot"
        android:contentDescription="@string/dialog_load_game_slot_2"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/load_game_dialog_delete_second_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/load_game_dialog_delete_first_btn"
        app:layout_constraintBottom_toTopOf="@+id/load_game_dialog_delete_third_btn"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/main_screen_button"
        android:src="@drawable/ic_delete_24"
        android:background="@android:color/transparent"
        android:text="@string/load_game_dialog_empty_slot"
        android:contentDescription="@string/dialog_load_game_delete_2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/load_game_dialog_third_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/load_game_dialog_second_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/load_game_dialog_delete_third_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/main_screen_button"
        android:text="@string/load_game_dialog_empty_slot"
        android:contentDescription="@string/dialog_load_game_slot_3"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/load_game_dialog_delete_third_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/load_game_dialog_delete_second_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/main_screen_button"
        android:src="@drawable/ic_delete_24"
        android:background="@android:color/transparent"
        android:text="@string/load_game_dialog_empty_slot"
        android:contentDescription="@string/dialog_load_game_delete_3"/>

</androidx.constraintlayout.widget.ConstraintLayout>