<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_main_scree_logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_screen_play_online_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/blackjack_icon"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_main_screen_play_online_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_screen_new_game_btn"
        android:layout_margin="@dimen/margin_large_size"
        android:text="@string/fragment_main_screen_play_online"
        android:background="@drawable/rounded_corner_colored" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_main_screen_new_game_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_screen_load_game_btn"
        android:layout_margin="@dimen/margin_large_size"
        android:text="@string/fragment_main_screen_new_game"
        android:background="@drawable/rounded_corner_colored"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_main_screen_load_game_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/margin_large_size"
        android:layout_marginBottom="@dimen/margin_xlarge_size"
        android:text="@string/fragment_main_screen_load_game"
        android:background="@drawable/rounded_corner_colored"/>

</androidx.constraintlayout.widget.ConstraintLayout>